--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h2 {
   display:flex;
   justify-content:center;
   align-items:center;
-  font-family:FigtreeMedium;
+  font-family:Figtree;
   font-style:normal;
   font-weight:800;
   color:var(--Gray-950);
@@ -103,7 +103,7 @@ h1{
 }
 
 .heading-text p{
-  font-family:FigtreeMedium;
+  font-family:Figtree;
   font-size:var(--font-size-16px);
   font-weight:500;
   line-height:var(--line-height);
@@ -121,7 +121,7 @@ h1{
 }
 
 .author p{
-  font-family:FigtreeMedium;
+  font-family:Figtree;
   font-weight:800;
   line-height:var(--line-height);
   text-align: center;
@@ -142,7 +142,7 @@ h1{
 }
 
 /* Hover Effect for Section Title */
-h2:hover{
+h1:hover{
   font-family:Figtree;
   font-weight:800;
   color:var(--Yellow);
